# beer-lambert-data-product

./: README.md  main.py  pyproject.toml
src/: model.py  pipeline.py  read.py  transform.py  write.py
src/data/: calibration.csv
src/training/: model.py  pipeline.py  read.py  transform.py
test/: test_model.py  test_pipeline.py  test_read.py  test_transform.py  test_write.py
test/training/: test_model.py  test_pipeline.py  test_read.py  test_transform.py
