[tool.poetry]
name = "beer-lambert-data-product"
version = "0.1.0"
description = ""
authors = ["Jo Uthoff <johanna.uthoff@autotrader.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

